# FiveLang

./: .gitignore  CMakeLists.txt  Debugger.cpp  LICENSE  README.md  example.flang  test.cs
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: c-cpp.yml  cmake.yml  codeql.yml  cppverify.yml  msbuild.yml  msvc.yml
Examples/: example.flang
FLang-RTC/: ConsoleUtils.cpp  ConsoleUtils.h  FLang-RTC.cpp  FLang-RTC.sln  FLang-RTC.vcxproj  FLang-RTC.vcxproj.filters  FileUtils.cpp  Lexer.cpp  Lexer.h  Utils.h
FLang-RTC/x64/Debug/: CodeAnalysisResultManifest.txt  ConsoleUtils.nativecodeanalysis.sarif  FLang-RTC.exe.recipe  FLang-RTC.ilk  FLang-RTC.nativecodeanalysis.sarif  FLang-RTC.vcxproj.FileListAbsolute.txt  FileUtils.nativecodeanalysis.sarif  FileUtils.nativecodeanalysis.xml  Lexer.nativecodeanalysis.sarif  Lexer.nativecodeanalysis.xml  vc.nativecodeanalysis.all.xml  vc143.idb
FLang-RTC/x64/Debug/FLang-RTC.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FLang-RTC.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Headers/: Lexer.h  Utils.h
Headers/Utils/: ConsoleUtils.h  FileUtils.h
Utils/: ConsoleUtils.cpp  FileUtils.cpp
Utils/Headers/: ConsoleUtils.h  FileUtils.h
include/: CommonLibs.h  ConsoleUtils.h  Debugger.h  FileUtils.h  Input.h  Lexer.h  StringUtils.h  Tokens.h  Utils.h
include/lib/: ConsoleUtils.h  Defaults.h  FileUtils.h  StringUtils.h
lib/: ConsoleUtils.cpp  FileUtils.cpp  StringUtils.cpp
src/: Debugger.cpp  Input.cpp  Lexer.cpp  Tokens.cpp
